<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/category"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg2Length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

        <RadioButton
            android:id="@+id/a2b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a2b"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/b2a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b2a"
            android:textSize="24sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rgLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

        <RadioButton
            android:id="@+id/ft2in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ft2in"
            android:textSize="24sp" />
        <RadioButton
            android:id="@+id/ft2yd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ft2yd"
            android:textSize="24sp" />
        <RadioButton
            android:id="@+id/in2ft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in2ft"
            android:textSize="24sp" />
        <RadioButton
            android:id="@+id/in2yd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in2yd"
            android:textSize="24sp" />
        <RadioButton
            android:id="@+id/yd2ft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yd2ft"
            android:textSize="24sp" />
        <RadioButton
            android:id="@+id/yd2in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yd2in"
            android:textSize="24sp" />
    </RadioGroup>

    <!-- Add another RadioGroup -->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgLength">

        <EditText
            android:id="@+id/lvalue"
            android:layout_weight="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="number"/>

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="="
            android:textSize="25sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/rvalue"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="146dp"
        android:layout_height="47dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="72dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgLength" />

</androidx.constraintlayout.widget.ConstraintLayout>